Basic instructions on configuring the JVM.